# abaddon

./: .clang-format  .gitignore  .gitmodules  .travis.yml  Abaddon.sln  Abaddon.vcxproj  Abaddon.vcxproj.filters  CMakeLists.txt  Doxyfile  Main.Css  README.md  abaddon.cpp  abaddon.hpp  appveyor.yml  constants.hpp  emojis.cpp  emojis.hpp  filecache.cpp  filecache.hpp  flake.nix  http.cpp  http.hpp  imgmanager.cpp  imgmanager.hpp  murmurhash3.cpp  murmurhash3.h  platform.cpp  platform.hpp  settings.cpp  settings.hpp  state.cpp  util.cpp  util.hpp
.github/workflows/: ci.yml
.lapce/: gen_compile_commands.sh  run.toml
ci/: make-msys2-release.sh  msys-deps.txt  used-icons.txt
cmake/: CheckAtomic.cmake  FindHarfBuzz.cmake  Findatk.cmake  Findatkmm.cmake  Findcairo.cmake  Findcairomm.cmake  Findcpr.cmake  Findgdk.cmake  Findgdkmm.cmake  Findgdkpixbuf.cmake  Findglib.cmake  Findglibmm.cmake  Findgtk.cmake  Findgtkmm.cmake  Findixwebsocket.cmake  Findlibhandy.cmake  Findnlohmann_json.cmake  Findpango.cmake  Findpangomm.cmake  Findrnnoise.cmake  Findsigc++.cmake  Findsimpleini.cmake  Finduiohook.cmake
components/: cellrendererpixbufanimation.cpp  cellrendererpixbufanimation.hpp  channels.cpp  channels.hpp  chatinput.cpp  chatinput.hpp  chatinputindicator.cpp  chatinputindicator.hpp  chatlist.cpp  chatlist.hpp  chatmessage.cpp  chatmessage.hpp  chatwindow.cpp  chatwindow.hpp  completer.cpp  completer.hpp  friendslist.cpp  friendslist.hpp  inotifyswitched.hpp  lazyimage.cpp  lazyimage.hpp  memberlist.cpp  memberlist.hpp  ratelimitindicator.cpp  ratelimitindicator.hpp  statusindicator.cpp  statusindicator.hpp  typingindicator.cpp  typingindicator.hpp
css/: application-low-priority.css  bare.css  main.css
dialogs/: confirm.cpp  confirm.hpp  editmessage.cpp  editmessage.hpp  friendpicker.cpp  friendpicker.hpp  joinguild.cpp  joinguild.hpp  setstatus.cpp  setstatus.hpp  token.cpp  verificationgate.cpp  verificationgate.hpp
discord/: activity.cpp  activity.hpp  auditlog.cpp  auditlog.hpp  ban.cpp  ban.hpp  channel.cpp  channel.hpp  discord.cpp  discord.hpp  emoji.cpp  emoji.hpp  guild.cpp  guild.hpp  http.cpp  http.hpp  httpclient.cpp  httpclient.hpp  interactions.cpp  interactions.hpp  invite.cpp  invite.hpp  json.hpp  member.cpp  member.hpp  message.cpp  message.hpp  objects.cpp  objects.hpp  permissions.cpp  permissions.hpp  relationship.hpp  role.cpp  role.hpp  snowflake.cpp  snowflake.hpp  sticker.cpp  sticker.hpp  store.cpp  store.hpp  (+6 more)
fonts/: fonts.conf
fonts/conf.d/: 55-emoji-prepend.conf
nix/: hm-module.nix  module.nix  nixos-module.nix
po/: CMakeLists.txt  POTFILES  TRANSLATING.md  abaddon.pot  pt_BR.po
res/css/: application-low-priority.css  bare.css  main.css
res/fonts/: fonts.template.conf
src/: abaddon.cpp  abaddon.hpp  config.h.in  constants.hpp  emojis.cpp  emojis.hpp  filecache.cpp  filecache.hpp  http.cpp  http.hpp  imgmanager.cpp  imgmanager.hpp  platform.cpp  platform.hpp  settings.cpp  settings.hpp  startup.cpp  startup.hpp  state.cpp  state.hpp  util.cpp  util.hpp  yyjson_util.cpp  yyjson_util.h
src/audio/: audio_device.cpp  audio_device.hpp  audio_engine.cpp  audio_engine.hpp  context.cpp  context.hpp  devices.cpp  devices.hpp  jitterbuffer.hpp  ma_impl.cpp  manager.cpp  manager.hpp  utils.hpp
src/components/: cellrenderermemberlist.cpp  cellrenderermemberlist.hpp  cellrendererpixbufanimation.cpp  cellrendererpixbufanimation.hpp  channels.cpp  channels.hpp  channelscellrenderer.cpp  channelscellrenderer.hpp  channeltabswitcherhandy.cpp  channeltabswitcherhandy.hpp  chatinput.cpp  chatinput.hpp  chatinputindicator.cpp  chatinputindicator.hpp  chatlist.cpp  chatlist.hpp  chatmessage.cpp  chatmessage.hpp  chatwindow.cpp  chatwindow.hpp  completer.cpp  completer.hpp  draglistbox.cpp  draglistbox.hpp  friendslist.cpp  friendslist.hpp  lazyimage.cpp  lazyimage.hpp  memberlist.cpp  memberlist.hpp  memberlistcellrenderer.cpp  memberlistcellrenderer.hpp  progressbar.cpp  progressbar.hpp  ratelimitindicator.cpp  ratelimitindicator.hpp  statusindicator.cpp  statusindicator.hpp  unreadrenderer.cpp  unreadrenderer.hpp  (+4 more)
src/dialogs/: call.cpp  call.hpp  confirm.cpp  confirm.hpp  editmessage.cpp  editmessage.hpp  friendpicker.cpp  friendpicker.hpp  joinguild.cpp  joinguild.hpp  screensharedialog.cpp  screensharedialog.hpp  setstatus.cpp  setstatus.hpp  textinput.cpp  textinput.hpp  token.cpp  token.hpp  verificationgate.cpp  verificationgate.hpp
src/discord/: activity.hpp  auditlog.hpp  ban.hpp  channel.cpp  channel.hpp  chatsubmitparams.hpp  dave.cpp  dave.hpp  discord.cpp  discord.hpp  emoji.cpp  emoji.hpp  errors.hpp  guild.cpp  guild.hpp  httpclient.cpp  httpclient.hpp  interactions.cpp  interactions.hpp  json.hpp  member.cpp  member.hpp  message.cpp  message.hpp  objects.cpp  objects.hpp  permissions.cpp  permissions.hpp  relationship.cpp  relationship.hpp  role.cpp  role.hpp  rtppacketizer.cpp  rtppacketizer.hpp  snowflake.cpp  snowflake.hpp  stage.cpp  stage.hpp  sticker.cpp  sticker.hpp  (+16 more)
src/misc/: GlobalHotkeyManager.cpp  GlobalHotkeyManager.hpp  bitwise.hpp  cairo.cpp  cairo.hpp  channel.hpp  chatutil.cpp  chatutil.hpp  events.cpp  events.hpp  is_optional.hpp  mutex.hpp  slice.hpp  threadpool.hpp
src/notifications/: notifications.cpp  notifications.hpp  notifier.hpp  notifier_fallback.cpp  notifier_gio.cpp  notifier_null.cpp
src/remoteauth/: remoteauthclient.cpp  remoteauthclient.hpp  remoteauthdialog.cpp  remoteauthdialog.hpp  ssl.hpp
src/video/: capture.cpp  capture.hpp
src/windows/: guildsettingswindow.cpp  guildsettingswindow.hpp  mainwindow.cpp  mainwindow.hpp  pinnedwindow.cpp  pinnedwindow.hpp  profilewindow.cpp  profilewindow.hpp  threadswindow.cpp  threadswindow.hpp  voicesettingswindow.cpp  voicesettingswindow.hpp  voicewindow.cpp  voicewindow.hpp
windows/: guildsettingswindow.cpp  guildsettingswindow.hpp  mainwindow.cpp  mainwindow.hpp  pinnedwindow.cpp  pinnedwindow.hpp  profilewindow.cpp  profilewindow.hpp  threadswindow.cpp  threadswindow.hpp
windows/guildsettings/: auditlogpane.cpp  auditlogpane.hpp  banspane.cpp  (+11 more)
(+97 files in other folders)
